Fixed PDF on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 .pdf {
     margin:0 auto;
     text-align:center;
-
+    font-family: Arial, sans-serif;
 }
 
 body {
